# heat-battery

./: .gitignore  MANIFEST.in  README.md  config_template.yaml  pyproject.toml  setup.py  test_visualizer.py  worker_test.py
.github/: github_test_config.yaml
.github/workflows/: build-ubuntu.yml  build-wsl.yml  install-ubuntu.yml  python-app.yml  ubuntu-20.04.yml  ubuntu-22.04.yml  (+3 more)
assets/: readme_cloc_history.md
examples/: run.py
heat_battery/: base_config.yaml  config.py  utilities.py
install_scripts/: install_ubuntu.sh
test/: Experiment_1.py  Experiment_1_identifiability.py  Experiment_v1.stp  Experiment_v2.1.stp  Experiment_v2.2.stp  TF46.stp  TwoWire_contact.stp  Urbanek.stp  Urbanek_membrane.stp  Urbanek_v2.stp  adjoint_test.py  no_test_data_loader.py  no_test_om_interface.py  no_test_visualizer.py  test_002_experiment_geometry.py  test_003_steady_state_fitting.py  test_004_steady_state_fitting_contact.py  test_005_cumulative_density.py  test_006_plot_k_property.py  test_a_importing.py  test_cumulative_density.py  test_derivative.py  test_discovery.py  test_examples.py  test_experiment_geometry.py  test_materials.py  test_optimizer_ADAM.py  test_optimizer_BFGS.py  test_optimizer_GaussNewtonDescend.py  test_plot_k_property.py  test_postgresql.py  test_simulation_solve.py  test_steady_state_fitter.py  test_steady_state_fitting.py  test_steady_state_fitting_contact.py  test_sweep.py  test_temperature_spectrum.py  test_unsteady.py  test_visualizer.py
tests/: Experiment_1.py  adjoint_test.py
utilities/: create_cloc_chart.py  update_cloc_data.sh
(+127 files in other folders)
